# Embedded-Escape-Room-Station

./: README.md
Embedded Escape Room/: CMakeLists.txt  buttons.c  buttons.h  buzzer.c  buzzer.h  calculate_angle.py  cv_requirements.txt  finger_counter.py  keypad.c  keypad.h  lcd_i2c.c  lcd_i2c.h  main.c  pulley.c  pulley.h  servo.c  servo.h  servo_controller.c  servo_controller.h  state_machine.c  state_machine.h  station6.uf2  supervisor.py  ultrasonic_sensor.c  ultrasonic_sensor.h
